Start index page, rough draft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>The Conifers of Maine</title>
+</head>
+<body bgcolor="#006600">
+	<h1>The Conifers of Maine</h1>
+	<h2>Introduction</h2>
+		<blockquote>"The Pine Tree State..."</blockquote>
+		<p><font color=white>Conifers are trees that bear pinecones. There are two kinds of conifers: pines and spruces. Both occur frequently throughout the forests of Maine, in the Northeast United States in what is known as New England.</font>
+
+	<h2>What are the most common conifer varieties?</h2>
+		<div>
+			<h4>Eastern White Pine (<i>Pinus strobus</i>)</h4>
+				<p>The Eastern white pine is the most common pine species in Maine. In fact, over the years its lent the Maine its nickname, The Pine State.
+				<img src="images/Pinus_strobus_Acadia_0352.jpg" width=500 height=400 alt="White Pine">
+				</p>
+			<h4>Red Spruce (<i>Picea rubens</i>)</h4>
+				<p>The Eastern white pine is the most common pine species in Maine. In fact, over the years its lent the Maine its nickname, The Pine State.
+				<img src="images/Picea_rubens_UGA5349098.jpg" width=500 height=400 alt="Red Spruce">
+				</p>
+			<h4>Balsam Fir (<i>Abies balsamea</i>)</h4>
+				<p>The Eastern white pine is the most common pine species in Maine. In fact, over the years its lent the Maine its nickname, The Pine State.
+				<img src="images/Abies_balsamea_MtWashington.jpg" width=500 height=400 alt="Balsam Fir">
+				</p>
+			<h4>Eastern Hemlock (<i>Tsuga canadensis</i>)</h4>
+				<p>The Eastern white pine is the most common pine species in Maine. In fact, over the years its lent the Maine its nickname, The Pine State.
+				<img src="images/2013-08-25_15_39_09_Closeup_of_Eastern_Hemlock_foliage_across_Taborton_Road_from_the_entrance_to_Spring_Lake_in_Berlin,_New_York.jpg" width=500 height=400 alt="Eastern Hemlock">
+				</p>
+			</div>
+	<h2>What are some current issues?</h2>
+		<p>Text</p>
+	<h2>How can I get in touch?</h2>
+		<p>Please <a href="report.html">let us know</a>if you see one of these trees by submitting a species sighting!</a></p>
+		<nav>
+			<a href="report.html">Species Sighting Page</a>
+		</nav>
+	<h3>For further reading:</h3>
+		<ul>
+			<li>ENTER TEXT AND URL HERE
+			<li><a href="https://www1.maine.gov/dacf/mfs/publications/handbooks_guides/forest_trees/pdf/Introduction.pdf">Forest Trees of Maine</a>, Maine Forest Service, Dept. of Conservation. 2008.
+		</ul>
+</body>
+<footer><b>Powered by MainePage, Inc.</b></footer>
+</html>
