Fix index after running thru validator

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
 	<title>The Conifers of Maine</title>
 </head>
 <body bgcolor="#006600">
 	<h1>The Conifers of Maine</h1>
 	<h2>Introduction</h2>
-		<blockquote>"Resolved, That the Pine Cone and Tassel is hereby declared to be the floral emblem for Maine, in the National Garland of Flowers..." -State Resolution, 1895</blockquote>
+		<blockquote><font face=Georgia>"Resolved, That the Pine Cone and Tassel is hereby declared to be the floral emblem for Maine, in the National Garland of Flowers..." -State Resolution, 1895</font></blockquote>
 		<p><font color=white>Conifers are trees that bear pinecones and have needle-like leaves. There are several main classes of conifers, including pines, spruces, and hemlocks. All of them occur throughout the forests of Maine, in the Northeastern part of the  United States.</font>
 	<h2>What are the most common conifer varieties?</h2>
 		<div>
@@ -35,17 +35,14 @@
 	<h2>What are some current issues?</h2>
 		<p>In recent years, ecological threats to Maine's forests have been on the rise. This has partly been due to the influx of invasive insects, including wood-borers and the Hemlock wooly adelgid. The Maine Department of Agriculture, Conservation and Forestry is doing its part to help prevent the spread of invasive species.</p>
 	<h2>How can I get in touch?</h2>
-		<p>Please <a href="report.html">let us know</a> if you see one of these species by submitting a tree sighting!</a></p>
-		<nav>
+		<p>Please <a href="report.html">let us know</a> if you see one of these species by submitting a tree sighting!</p>
 			<ul>
 				<li><a href="report.html">Tree Sighting Page</a>
-		</nav>
+		</ul>
 	<h3>For further reading:</h3>
 		<ul>
-			<li><a href="http://www.treesforme.com/maine.html">Trees for ME</a> Here's a website similar in subject to mine. I don't like its presentation because it's not easy to read: the paragraphs are dense and the sections are not similarly formatted. I suppose overall it just feels unfinished. I do see some HTML I could learn from when looking at the source code, however, including the `style` tag, "Back to Top" hyperlinking, and the `face` attribute to change the font style.
+			<li><a href="http://www.treesforme.com/maine.html">Trees for ME</a> Here's a website similar in subject to mine. I don't like its presentation because it's not easy to read: the paragraphs are dense and the sections are not similarly formatted. I suppose overall it just feels unfinished. I do see some HTML I could learn from when looking at the source code, however, including `style` tag, "Back to Top" linking, and the `face` attribute to change the font style.
 			<li><a href="https://www1.maine.gov/dacf/mfs/publications/handbooks_guides/forest_trees/pdf/Introduction.pdf">Forest Trees of Maine</a>, Maine Forest Service, Dept. of Conservation. 2008.
 		</ul>
 </body>
-<hr>
-<footer><b>Powered by MainePage, Inc. (jk)</b></footer>
 </html>
