Remove outdated  tag, prep for css

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
 	<title>The Conifers of Maine</title>
 </head>
-<body bgcolor="#006600">
+<body>
 	<h1>The Conifers of Maine</h1>
 	<h2>Introduction</h2>
-		<blockquote><font face=Georgia>"Resolved, That the Pine Cone and Tassel is hereby declared to be the floral emblem for Maine, in the National Garland of Flowers..." -State Resolution, 1895</font></blockquote>
-		<p><font color=white>Conifers are trees that bear pinecones and have needle-like leaves. There are several main classes of conifers, including pines, spruces, and hemlocks. All of them occur throughout the forests of Maine, in the Northeastern part of the  United States.</font>
+		<blockquote>"Resolved, That the Pine Cone and Tassel is hereby declared to be the floral emblem for Maine, in the National Garland of Flowers..." -State Resolution, 1895</blockquote>
+		<p>Conifers are trees that bear pinecones and have needle-like leaves. There are several main classes of conifers, including pines, spruces, and hemlocks. All of them occur throughout the forests of Maine, in the Northeastern part of the  United States.
 	<h2>What are the most common conifer varieties?</h2>
 		<div>
 			<h4>Eastern White Pine (<i>Pinus strobus</i>)</h4>
-				<p>The Eastern white pine is the most common pine species in Maine. In fact, its abundance has given the state its nickname, "The Pine Tree State." It has been historically and important part of the Maine economy.
+				<p>The Eastern white pine is the most common pine species in Maine. In fact, its abundance has given the state its nickname, "The Pine Tree State." It has been historically an important part of the Maine economy.
 				<br>
 				<br>
 				<img src="images/Pinus_strobus_Acadia_0352.jpg" width=500 height=400 alt="White Pine">
 				</p>
 			<h4>Red Spruce (<i>Picea rubens</i>)</h4>
-				<p>The Red spruce is found throughout the state, often on the north sides of slopes and in rocky soils. It's bark is scaly and reddish and it drops its cones seasonally every year.
+				<p>The Red spruce is found throughout the state, often on the north sides of slopes and in rocky soils. Its bark is scaly and reddish and it drops its cones seasonally every year.
 					<br><br>
 				<img src="images/Picea_rubens_UGA5349098.jpg" width=500 height=400 alt="Red Spruce">
 				</p>
