Add stylesheet and link in index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
 	<title>The Conifers of Maine</title>
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 	<h1>The Conifers of Maine</h1>
