Update report.html with style link

--- a/report.html
+++ b/report.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Submit Your Sighting</title>
 </head>
+<link rel="stylesheet" href="styles.css" type="text/css">
 <body>
 	<h1>Submit Your Sighting</h1>
 	<p>Please share your conifer species sighting here.
