--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>The Conifers of Maine</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="client.js"></script>
 </head>
 <body>
 	<main>
