Prepare left, right, up, down scroll functionality

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 </head>
 <body>
 	<main>
-		<div id="my-greeting">
-			Hi, I'm Omar.
+		<div id="center-box">
+			<div id="my-greeting">
+				<p>Hi, I'm Omar.</p>
+			</div>
 		</div>
 	</main>
+	<div id="my-contact">
+		<p>Github: @omarchaeopteryx</p>
+		<p>Email: omar.a.malik@icloud.com</p>
+		<p>Skype: omarmalik_skype </p>
+		<p>Twitter: sherlock_omz </p>
+	</div>
 </body>
 </html>
