Add coordinate checker function

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		</div>
 	</main>
 	<div id="my-contact">
-		<p>Github: @omarchaeopteryx</p>
 		<p>Email: omar.a.malik@icloud.com</p>
+		<p>Github: @omarchaeopteryx</p>
 		<p>Skype: omarmalik_skype </p>
-		<p>Twitter: sherlock_omz </p>
+		<p>Twitter: @sherlock_omz </p>
 	</div>
 </body>
 </html>
