Fix upper, left, right, lower display hidings; delete old images

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 </head>
 <body>
 	<main>
-		<div id="center-box">
-			<div id="my-greeting">
-				<p>Hi, I'm Omar.</p>
-			</div>
+		<div id="canvas">
+				<div id="center-box">
+					<p>Hi, I'm Omar.</p>
+				</div>
+				<div id="right-box">
+					<p>Email: omar.a.malik@icloud.com</p>
+					<p>Github: @omarchaeopteryx</p>
+					<p>Skype: omarmalik_skype </p>
+					<p>Twitter: @sherlock_omz </p>
+				</div>
+				<div id="left-box"
+					<p>LEFT</p>
+				</div>
+				<div id="upper-box"
+					<p>UPPER</p>
+				</div>
+				<div id="lower-box"
+					<p>LOWER</p>
+				</div>
 		</div>
-	</main>
-	<div id="my-contact">
-		<p>Email: omar.a.malik@icloud.com</p>
-		<p>Github: @omarchaeopteryx</p>
-		<p>Skype: omarmalik_skype </p>
-		<p>Twitter: @sherlock_omz </p>
-	</div>
+</main>
 </body>
 </html>
