Add text placeholders

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
 					<p>Twitter: @sherlock_omz </p>
 				</div>
 				<div id="left-box"
-					<p>LEFT</p>
+					<h2>About</h2>
+					<p>Coming Soon.</p>
 				</div>
 				<div id="upper-box"
-					<p>UPPER</p>
+					<h2>Projects</h2>
+					<p>Coming Soon.</p>
 				</div>
 				<div id="lower-box"
-					<p>LOWER</p>
+					<h2>Publications</h2>
+					<p>Coming Soon.</p>
 				</div>
 		</div>
 </main>
