--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Omar Malik</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script src="client.js"></script>
 </head>
 <body>
@@ -13,6 +14,7 @@
 					<p>Hi, I'm Omar.</p>
 				</div>
 				<div id="right-box">
+					<h2>Contact</h2>
 					<p>Email: omar.a.malik@icloud.com</p>
 					<p>Github: @omarchaeopteryx</p>
 					<p>Skype: omarmalik_skype </p>
