Add table rows scaffolding

--- a/index.html
+++ b/index.html
@@ -4,35 +4,57 @@
 	<title>Omar Malik</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="client.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 	<main>
-		<div id="canvas">
-				<div id="center-box">
-					<p>Hi, I'm Omar.</p>
+		<table>
+			<th>A</th>
+			<th>B</th>
+			<th>C</th>
+		<tr>
+			<td>X</td>
+			<td class="icon"><i class="fa fa-chevron-up"></i></td>
+			<td>X</td>
+		</tr>
+		<tr>
+			<td class="icon"><i class="fa fa-chevron-left"></i></td>
+			<td>
+				<div id="canvas">
+					<div id="center-box">
+						<p>Hi, I'm Omar.</p>
+					</div>
+					<div id="right-box">
+						<h2>Contact</h2>
+						<p>Email: omar.a.malik@icloud.com</p>
+						<p>Github: @omarchaeopteryx</p>
+						<p>Skype: omarmalik_skype </p>
+						<p>Twitter: @sherlock_omz </p>
+					</div>
+					<div id="left-box"
+						<h2>About</h2>
+						<p>Coming Soon.</p>
+					</div>
+					<div id="upper-box"
+						<h2>Projects</h2>
+						<p>Coming Soon.</p>
+					</div>
+					<div id="lower-box"
+						<h2>Publications</h2>
+						<p>Coming Soon.</p>
+					</div>
 				</div>
-				<div id="right-box">
-					<h2>Contact</h2>
-					<p>Email: omar.a.malik@icloud.com</p>
-					<p>Github: @omarchaeopteryx</p>
-					<p>Skype: omarmalik_skype </p>
-					<p>Twitter: @sherlock_omz </p>
-				</div>
-				<div id="left-box"
-					<h2>About</h2>
-					<p>Coming Soon.</p>
-				</div>
-				<div id="upper-box"
-					<h2>Projects</h2>
-					<p>Coming Soon.</p>
-				</div>
-				<div id="lower-box"
-					<h2>Publications</h2>
-					<p>Coming Soon.</p>
-				</div>
-		</div>
+			</td>
+			<td class="icon"><i class="fa fa-chevron-right"></i></td>
+		</tr>
+		<tr>
+			<td>X</td>
+			<td class="icon"><i class="fa fa-chevron-down"></i></td>
+			<td>X</td>
+		</tr>
+	</table>
 </main>
 </body>
 </html>
