Make buttons lighter, remove scaffolding

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 	<main>
 		<table>
-			<th>A</th>
-			<th>B</th>
-			<th>C</th>
+			<th></th>
+			<th></th>
+			<th></th>
 		<tr>
-			<td>X</td>
+			<td></td>
 			<td class="icon"><i class="fa fa-chevron-up"></i></td>
-			<td>X</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td class="icon"><i class="fa fa-chevron-left"></i></td>
@@ -28,10 +28,10 @@
 					</div>
 					<div id="right-box">
 						<h2>Contact</h2>
-						<p>Email: omar.a.malik@icloud.com</p>
-						<p>Github: @omarchaeopteryx</p>
-						<p>Skype: omarmalik_skype </p>
-						<p>Twitter: @sherlock_omz </p>
+						<p>email: omar.a.malik@icloud.com</p>
+						<p>github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
+						<p>twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></p>
+						<p>linkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
 					</div>
 					<div id="left-box"
 						<h2>About</h2>
@@ -50,9 +50,9 @@
 			<td class="icon"><i class="fa fa-chevron-right"></i></td>
 		</tr>
 		<tr>
-			<td>X</td>
+			<td></td>
 			<td class="icon"><i class="fa fa-chevron-down"></i></td>
-			<td>X</td>
+			<td></td>
 		</tr>
 	</table>
 </main>
