--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Omar Malik</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://use.fontawesome.com/fe9a36a02a.js"></script>
 	<script src="client.js"></script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
@@ -30,7 +30,7 @@
 						<h2>Contact</h2>
 						<p>email: omar.a.malik@icloud.com</p>
 						<p>github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
-						<p>twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></p>
+						<p>twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
 						<p>linkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
 					</div>
 					<div id="left-box"
