--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
 	<title>Omar Malik</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="styles.css" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://use.fontawesome.com/fe9a36a02a.js"></script>
@@ -10,6 +11,8 @@
 </head>
 <body>
 	<main>
+		<img id="bottom" src="github-mypage-1.svg" alt="A river as a background image">
+		<img id="top" src="github-mypage-2.svg" alt="A leaf as a background image">
 		<table>
 			<th></th>
 			<th></th>
