Update arrows; add email link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</div>
 					<div id="right-box">
 						<h2>Contact</h2>
-						<p>email: omar.a.malik@icloud.com</p>
+						<p>email:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
 						<p>github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
 						<p>twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
 						<p>linkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
