Flesh out text of About; fix alignments

--- a/index.html
+++ b/index.html
@@ -36,17 +36,34 @@
 						<p>twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
 						<p>linkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
 					</div>
-					<div id="left-box"
-						<h2>About</h2>
-						<p>Coming Soon.</p>
+					<div id="left-box">
+						<h1 class='page-title'>About me</h1>
+						<p>I'm a socially conscious Web developer.</p>
+						<p>I was born in the California in the 1980s and currently live in San Diego.</p>
+						<p>I got my start in eco-minded Web development by inserting YouTube videos into articles I was writing for the premiere amphibian informatics database, <a href="amphibiaweb.org">AmphibiaWeb.org.</a></p>
+						<p>Since then, I went to grad school and I worked mainly in consulting and doing stints at public policy <a href='https://envirocenter.yale.edu'>research centers</a>. I had incidentally launched websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns </a>with the <a href="http://palauun.org">United Nations </a>and done work for the Federal government in helping to launch a Web portal of national climate change <a href="http://www.globalchange.gov/browse/indicators">indicators</a> and enhance the website, <a href='globalchange.gov'>GlobalChange.gov</a></p>
+						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>, now being used by the NGO community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative crowd-sourced data </a>ideas. The lessons learned from the research were published in a peer-reviewed journal so that others could take on the task.</p>
+						<p>I believe that software, like science, relies on these peer sharing networks makes the most out of our ability to try new things and learn from our mistakes. It's the only we're going to make progress in this world.</p>
+						<p>I studied at the University of California, Berkeley and did my post-graduate education at Yale's Environment School. I pivoted into software to make an even greater impact on consumers and society at large.</p>
+
+						<h3>What now?</h3>
+						<p>Let's collaborate and share ideas!</p>
 					</div>
-					<div id="upper-box"
+					<div id="upper-box">
 						<h2>Projects</h2>
 						<p>Coming Soon.</p>
 					</div>
-					<div id="lower-box"
+					<div id="lower-box">
 						<h2>Publications</h2>
-						<p>Coming Soon.</p>
+
+						<p>A historical perspective on fecal sludge reuse. <i>Broken Toilets</i>. 2016. <a href='http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/'>http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/</a></p>
+
+						<p>Is Fisheries Policy Nimble Enough? <i>Hakai Magazine</i>. 2015. <a href="https://www.hakaimagazine.com/article-short/fisheries-policy-nimble-enough">https://www.hakaimagazine.com/article-short/fisheries-policy-nimble-enough</a>
+
+						<p>Omar Malik, Angel Hsu, Laura A. Johnson, and Alex de Sherbinin. A global indicator of wastewater treatment to inform the Sustainable Development Goals (SDGs). <i>Environmental Science & Policy</i>. 48 (2015): 172-185.<a href="        http://dx.doi.org/10.1016/j.envsci.2015.01.005">doi: 10.1016/j.envsci.2015.01.005</a>
+						</p>
+
+						<p>Angel Hsu, Omar Malik, Laura Johnson, Daniel C Esty. Mobilize citizens to track sustianability. <i>Nature</i>. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
 					</div>
 				</div>
 			</td>
