--- a/index.html
+++ b/index.html
@@ -31,23 +31,29 @@
 					</div>
 					<div id="right-box">
 						<h2>Contact</h2>
-						<p>email:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
-						<p>github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
-						<p>twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
-						<p>linkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
+						<p>Mail:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
+						<p>Github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
+						<p>Twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
+						<p>LinkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
-						<p>I'm a socially conscious Web developer.</p>
-						<p>I was born in the California in the 1980s and currently live in San Diego.</p>
-						<p>I got my start in eco-minded Web development by inserting YouTube videos into articles I was writing for the premiere amphibian informatics database, <a href="amphibiaweb.org">AmphibiaWeb.org.</a></p>
-						<p>Since then, I went to grad school and I worked mainly in consulting and doing stints at public policy <a href='https://envirocenter.yale.edu'>research centers</a>. I had incidentally launched websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns </a>with the <a href="http://palauun.org">United Nations </a>and done work for the Federal government in helping to launch a Web portal of national climate change <a href="http://www.globalchange.gov/browse/indicators">indicators</a> and enhance the website, <a href='globalchange.gov'>GlobalChange.gov</a></p>
-						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>, now being used by the NGO community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative crowd-sourced data </a>ideas. The lessons learned from the research were published in a peer-reviewed journal so that others could take on the task.</p>
-						<p>I believe that software, like science, relies on these peer sharing networks makes the most out of our ability to try new things and learn from our mistakes. It's the only we're going to make progress in this world.</p>
-						<p>I studied at the University of California, Berkeley and did my post-graduate education at Yale's Environment School. I pivoted into software to make an even greater impact on consumers and society at large.</p>
+						<p>I'm a socially conscious Web developer who is using science and software for good.</p>
+						<p>I currently live in San Diego, California.</p>
+						<p>I got my start in eco-minded Web development by inserting YouTube videos into my articles for the world's premier amphibian informatics database at UC Berkeley, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
+						<p>Since then, I've gone to grad school and I worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although considered an analyst, I had often found myself launching websites during <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns </a>(partering with the <a href="http://palauun.org">United Nations</a>, for example) and went on to do work for the US government in helping to launch a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on the site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+
+						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative crowd-sourced </a>ideas. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published</a> in a peer-reviewed journal so that others could help take on the task.</p>
+
+						<p><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></p>
+
+						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. It's a critical way to make progress for people and the planet.</p>
+
+						<p>I studied at UC Berkeley and Yale's School of Environment. By recently taking a Web/software development course at Dev Bootcamp, I'm now making an even greater impact on consumers and society.</p>
 
 						<h3>What now?</h3>
-						<p>Let's collaborate and share ideas!</p>
+						<p>Let's collaborate on good ideas!</p>
+						<p>Mail:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
 					</div>
 					<div id="upper-box">
 						<h2>Projects</h2>
@@ -62,6 +68,8 @@
 
 						<p>Omar Malik, Angel Hsu, Laura A. Johnson, and Alex de Sherbinin. A global indicator of wastewater treatment to inform the Sustainable Development Goals (SDGs). <i>Environmental Science & Policy</i>. 48 (2015): 172-185.<a href="        http://dx.doi.org/10.1016/j.envsci.2015.01.005">doi: 10.1016/j.envsci.2015.01.005</a>
 						</p>
+
+						<p>Where Is the Wastewater Going? How better data can make us more resilient. Union of Concerned Scientists blog. 2013. <a href="http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643">http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643</a>
 
 						<p>Angel Hsu, Omar Malik, Laura Johnson, Daniel C Esty. Mobilize citizens to track sustianability. <i>Nature</i>. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
 					</div>
