--- a/index.html
+++ b/index.html
@@ -40,20 +40,22 @@
 						<h1 class='page-title'>About me</h1>
 						<p>I'm a socially conscious Web developer who is using science and software for good.</p>
 						<p>I currently live in San Diego, California.</p>
-						<p>I got my start in eco-minded Web development by inserting YouTube videos into my articles for the world's premier amphibian informatics database at UC Berkeley, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
-						<p>Since then, I've gone to grad school and I worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although considered an analyst, I had often found myself launching websites during <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns </a>(partering with the <a href="http://palauun.org">United Nations</a>, for example) and went on to do work for the US government in helping to launch a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on the site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+						<p>I got my start in eco-minded Web development by inserting YouTube videos into my research articles for the world's premier amphibian informatics database at UC Berkeley, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
+						<p>Since then, I've gone to grad school and I worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although considered an analyst, I often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to save the oceans, for example) and went on to do work for the US government in helping launch a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on the site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
 						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative crowd-sourced </a>ideas. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published</a> in a peer-reviewed journal so that others could help take on the task.</p>
 
-						<p><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></p>
 
-						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. It's a critical way to make progress for people and the planet.</p>
+						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
+						<br>
 
-						<p>I studied at UC Berkeley and Yale's School of Environment. By recently taking a Web/software development course at Dev Bootcamp, I'm now making an even greater impact on consumers and society.</p>
+						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. It's a critical way to make progress these days for people and the planet.</p>
+
+						<p>I studied at UC Berkeley and Yale's School of Environment. By recently taking up Web + software development at Dev Bootcamp, I'm equipped to <b>help you make an even greater impact on consumers and society.</b></p>
 
 						<h3>What now?</h3>
-						<p>Let's collaborate on good ideas!</p>
-						<p>Mail:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
+						<p>Let's collaborate and find solutions to big problems!</p>
+						<h4><a id="link-contact" href="#get-in-touch">Contact</a></h4>
 					</div>
 					<div id="upper-box">
 						<h2>Projects</h2>
