Add .one address; add videos into publications

--- a/index.html
+++ b/index.html
@@ -71,9 +71,20 @@
 						<p>Omar Malik, Angel Hsu, Laura A. Johnson, and Alex de Sherbinin. A global indicator of wastewater treatment to inform the Sustainable Development Goals (SDGs). <i>Environmental Science & Policy</i>. 48 (2015): 172-185.<a href="        http://dx.doi.org/10.1016/j.envsci.2015.01.005">doi: 10.1016/j.envsci.2015.01.005</a>
 						</p>
 
-						<p>Where Is the Wastewater Going? How better data can make us more resilient. Union of Concerned Scientists blog. 2013. <a href="http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643">http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643</a>
+						<p>Where Is the Wastewater Going? How better data can make us more resilient. Union of Concerned Scientists blog. 2014. <a href="http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643">http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643</a>
 
-						<p>Angel Hsu, Omar Malik, Laura Johnson, Daniel C Esty. Mobilize citizens to track sustianability. <i>Nature</i>. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
+						<p>Angel Hsu, Omar Malik, Laura Johnson, Daniel C Esty. Mobilize citizens to track sustianability. <i>Nature</i>. 2014. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
+
+						<p>Setting the Standard in the Cleanup of Toxic Lead. Press release. 2013. <a href="http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution/">http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution"></a></p>
+
+						<h2>Videos</h2>
+
+						<p>The Frontlines of Fracking: A short documentary. <i>Sage Magazine</i> in collaboration with the Center for Business and the Environment, Ctr. for Environmental Law & Policy at Yale. 2012. <a href="http://www.sagemagazine.org/the-frontlines-of-fracking/">http://www.sagemagazine.org/the-frontlines-of-fracking/</a></p>
+
+						<p>The Immigrant: A short comedy about climate change. First place, Beneath the Waves Film Festival and Second Place, Sierra Club Eco-Comedy Film Fest. 2014. <a href="https://vimeo.com/60722820">https://vimeo.com/60722820</a></p>
+
+						<p>Introducing CliO, The Climate Organism. Audience Choice Award, Massachusetts Institute of Technology Climate CoLab competition. 2014. <a href="https://vimeo.com/146032819">https://vimeo.com/146032819</a></p>
+						<br>
 					</div>
 				</div>
 			</td>
