Add profile photo, update info

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<div id="canvas">
 					<div id="center-box">
 						<p>Hi, I'm Omar.</p>
+						<p><img id="my-self-portrait" src="https://employ-production.s3.amazonaws.com/uploads%2F1483724901563%2Fom-portrait-26533dbc.jpg"></p>
 					</div>
 					<div id="right-box">
 						<h2>Contact</h2>
@@ -38,23 +39,24 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
-						<p>I'm a socially conscious Web developer who is using science and software for good.</p>
+						<p>I'm a socially conscious Web developer using science and software for good.</p>
 						<p>I currently live in San Diego, California.</p>
-						<p>I got my start in eco-minded Web development by inserting YouTube videos into my research articles for the world's premier amphibian informatics database at UC Berkeley, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
-						<p>Since then, I've gone to grad school and I worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although considered an analyst, I often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to save the oceans, for example) and went on to do work for the US government in helping launch a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on the site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+						<p>I got my start in eco-friendly Web development by inserting YouTube videos into research articles for the world's premier amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
+						<p>Since then, I've gone to grad school and have worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although an analyst, I often found myself launching websites for various <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
-						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative crowd-sourced </a>ideas. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published</a> in a peer-reviewed journal so that others could help take on the task.</p>
+						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative ideas </a>involving crowd-sourcing. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published</a> in a peer-reviewed journal so that others could help take on the task.</p>
 
 
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. It's a critical way to make progress these days for people and the planet.</p>
+						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for both people and the planet.</p>
 
-						<p>I studied at UC Berkeley and Yale's School of Environment. By recently taking up Web + software development at Dev Bootcamp, I'm equipped to <b>help you make an even greater impact on consumers and society.</b></p>
+						<h3>Why me?</h3>
+						<p>I studied at UC Berkeley and Yale's School of Environment. By taking up Web+software development at Dev Bootcamp, I'm best equipped to <b>help you make impacts on consumers and society and think critically about problems.</b></p>
 
 						<h3>What now?</h3>
-						<p>Let's collaborate and find solutions to big problems!</p>
+						<p>Let's collaborate and start finding solutions!</p>
 						<h4><a id="link-contact" href="#get-in-touch">Contact</a></h4>
 					</div>
 					<div id="upper-box">
@@ -79,11 +81,11 @@
 
 						<h2>Videos</h2>
 
-						<p>The Frontlines of Fracking: A short documentary. <i>Sage Magazine</i> in collaboration with the Center for Business and the Environment, Ctr. for Environmental Law & Policy at Yale. 2012. <a href="http://www.sagemagazine.org/the-frontlines-of-fracking/">http://www.sagemagazine.org/the-frontlines-of-fracking/</a></p>
+						<p>The Frontlines of Fracking. <i>Sage Magazine</i> in collaboration with the Center for Business and the Environment, Ctr. for Environmental Law & Policy at Yale. 2012. <a href="http://www.sagemagazine.org/the-frontlines-of-fracking/">http://www.sagemagazine.org/the-frontlines-of-fracking/</a></p>
 
-						<p>The Immigrant: A short comedy about climate change. First place, Beneath the Waves Film Festival and Second Place, Sierra Club Eco-Comedy Film Fest. 2014. <a href="https://vimeo.com/60722820">https://vimeo.com/60722820</a></p>
+						<p>The Immigrant: A short comedy about climate change. First place, Beneath the Waves Film Festival; Second Place, Sierra Club Eco-Comedy Film Fest. 2014. <a href="https://vimeo.com/60722820">https://vimeo.com/60722820</a></p>
 
-						<p>Introducing CliO, The Climate Organism. Audience Choice Award, Massachusetts Institute of Technology Climate CoLab competition. 2014. <a href="https://vimeo.com/146032819">https://vimeo.com/146032819</a></p>
+						<p>Introducing CliO: The Climate Organism. Audience Choice Award, Massachusetts Institute of Technology "Climate CoLab" competition. 2014. <a href="https://vimeo.com/146032819">https://vimeo.com/146032819</a></p>
 						<br>
 					</div>
 				</div>
