Add projects descriptions, layout

--- a/index.html
+++ b/index.html
@@ -59,10 +59,19 @@
 						<p>Let's collaborate and start finding solutions!</p>
 						<h4><a id="link-contact" href="#get-in-touch">Contact</a></h4>
 					</div>
+
 					<div id="upper-box">
 						<h2>Projects</h2>
-						<p>Coming Soon.</p>
+						<p>More Soon.</p>
+						<table id="my-projects">
+							<tr>
+								<td class="project"><div class="my-square"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725527107%2Fgithub_critiquehub_screenshot_1.png"><div><a href="/candidates/4646/projects/1187/edit"><h4><strong>CritiqueHub</strong></h4></a><div class="paragraphs">CrtiqueHub is a web application that allows fanatics to review to review the latest movies. User can also leave comments on the movie reviews. The team constructed, tested and deployed the project in three days. </div></div></div></td>
+								<td class="project"><div class="my-square"><img class="thumbnail" src="https://employ-production.s3.amazonaws.com/uploads%2F1483725121282%2Fgoatogether-new-screenshot1.png"><div><a href="/candidates/4646/projects/1185/edit"><h4><strong>Goatogether App </strong></h4></a><div class="paragraphs">A Web app that lets users explore their local area and invite friends to go on journeys. Uses Twitter, Google Maps APIs to locate and pin social media posts to maps using dynamic search and data sorting methods.</div></div></div></td>
+								<td class="project"><div class="my-square"><img class="thumbnail" src="https://docs.google.com/drawings/d/11wvsnRv5hjB25ejJhyR4yDyTGCE3MkvXx1KDwjHv__c/pub?w=250&amp;h=250"><div><a href="/candidates/4646/projects/1185/edit"><h4><strong>Environmental Performance Index </strong></h4></a><div class="paragraphs">The Yale EPI provides a global view of the state of the environment with country by country metrics to inform decision-making. A Web platform allows users to explore data for countries. </div></div></div></td>
+							</tr>
+						</table>
 					</div>
+
 					<div id="lower-box">
 						<h2>Publications</h2>
 
