--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
-						<p>I'm a socially conscious Web developer using science and software for good.</p>
+						<p>I'm a socially conscious Web developer. <b> Using science and software for good.</b></p>
 						<p>I currently live in San Diego, California.</p>
 						<p>I got my start in eco-friendly Web development by inserting YouTube videos into research articles for the world's premier amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
 						<p>Since then, I've gone to grad school and have worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although an analyst, I often found myself launching websites for various <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
@@ -53,7 +53,7 @@
 						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for both people and the planet.</p>
 
 						<h3>Why me?</h3>
-						<p>I studied at UC Berkeley and Yale's School of Environment. By taking up Web+software development at Dev Bootcamp, I'm best equipped to <b>help you make impacts on consumers and society and think critically about problems.</b></p>
+						<p>I studied at UC Berkeley and hold a degree in environmental policy from Yale. By leveraging Web + software development at Dev Bootcamp, I'm especially equipped to <b>help you make impacts on consumers and society while thinking critically about problems.</b></p>
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
