--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 					</div>
 					<div id="right-box">
 						<h2>Contact</h2>
-						<p>Mail:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
+						<p>E-mail:<a href="mailto:omar.a.malik@icloud.com"> omar.a.malik@icloud.com</a></p>
 						<p>Github: <a href="https://github.com/omarchaeopteryx">@omarchaeopteryx</a></p>
 						<p>Twitter: <a href="https://twitter.com/sherlock_omz">@sherlock_omz</a></i></p>
 						<p>LinkedIn:<a href="https://linkedin.com/in/omarmalikprofile"> profile</a></p>
 					</div>
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
-						<p>I'm a socially conscious Web developer. <b> Using science and software for good.</b></p>
+						<p>I'm a socially conscious Web developer.</p>
 						<p>I currently live in San Diego, California.</p>
 						<p>I got my start in eco-friendly Web development by inserting YouTube videos into research articles for the world's premier amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
 						<p>Since then, I've gone to grad school and have worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although an analyst, I often found myself launching websites for various <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
-						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative ideas </a>involving crowd-sourcing. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published</a> in a peer-reviewed journal so that others could help take on the task.</p>
+						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative ideas</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
 
 
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
@@ -53,7 +53,7 @@
 						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for both people and the planet.</p>
 
 						<h3>Why me?</h3>
-						<p>I studied at UC Berkeley and hold a degree in environmental policy from Yale. By leveraging Web + software development at Dev Bootcamp, I'm especially equipped to <b>help you make impacts on consumers and society while thinking critically about problems.</b></p>
+						<p>I'm especially equipped to <b>help you make impacts on consumers and society while thinking critically about problems.</b></p>
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
@@ -76,20 +76,7 @@
 					</div>
 
 					<div id="lower-box">
-						<h2>Publications</h2>
-
-						<p>A historical perspective on fecal sludge reuse. <i>Broken Toilets</i>. 2016. <a href='http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/'>http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/</a></p>
-
-						<p>Is Fisheries Policy Nimble Enough? <i>Hakai Magazine</i>. 2015. <a href="https://www.hakaimagazine.com/article-short/fisheries-policy-nimble-enough">https://www.hakaimagazine.com/article-short/fisheries-policy-nimble-enough</a>
-
-						<p>Omar Malik, Angel Hsu, Laura A. Johnson, and Alex de Sherbinin. A global indicator of wastewater treatment to inform the Sustainable Development Goals (SDGs). <i>Environmental Science & Policy</i>. 48 (2015): 172-185.<a href="        http://dx.doi.org/10.1016/j.envsci.2015.01.005">doi: 10.1016/j.envsci.2015.01.005</a>
-						</p>
-
-						<p>Where Is the Wastewater Going? How better data can make us more resilient. Union of Concerned Scientists blog. 2014. <a href="http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643">http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643</a>
-
-						<p>Angel Hsu, Omar Malik, Laura Johnson, Daniel C Esty. Mobilize citizens to track sustianability. <i>Nature</i>. 2014. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
-
-						<p>Setting the Standard in the Cleanup of Toxic Lead. Press release. 2013. <a href="http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution/">http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution"></a></p>
+						<h1>Media</h1>
 
 						<h2>Videos</h2>
 
@@ -98,6 +85,21 @@
 						<p>The Immigrant: A short comedy about climate change. First place, Beneath the Waves Film Festival; Second Place, Sierra Club Eco-Comedy Film Fest. 2014. <a href="https://vimeo.com/60722820">https://vimeo.com/60722820</a></p>
 
 						<p>Introducing CliO: The Climate Organism. Audience Choice Award, Massachusetts Institute of Technology "Climate CoLab" competition. 2014. <a href="https://vimeo.com/146032819">https://vimeo.com/146032819</a></p>
+
+						<h2>Writing</h2>
+
+						<p>A historical perspective on fecal sludge reuse. <i>Broken Toilets</i>. 2016. <a href='http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/'>http://brokentoilets.org/blog/good-waste-historical-perspective-fecal-sludge-reuse/</a></p>
+
+						<p>Is Fisheries Policy Nimble Enough? <i>Hakai Magazine</i>. 2015. <a href="https://www.hakaimagazine.com/article-short/fisheries-policy-nimble-enough">https://www.hakaimagazine.com/article-short/fisheries-policy-nimble-enough</a>
+
+						<p>A global indicator of wastewater treatment to inform the Sustainable Development Goals (SDGs). <i>Environmental Science & Policy</i>. 48 (2015): 172-185. <a href="        http://dx.doi.org/10.1016/j.envsci.2015.01.005">doi: 10.1016/j.envsci.2015.01.005</a>
+						</p>
+
+						<p>Where Is the Wastewater Going? How better data can make us more resilient. Union of Concerned Scientists blog. 2014. <a href="http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643">http://blog.ucsusa.org/where-is-the-wastewater-going-how-better-data-can-make-us-more-resilient-643</a>
+
+						<p>Mobilize citizens to track sustianability. <i>Nature</i>. 2014. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
+
+						<p>Setting the Standard in the Cleanup of Toxic Lead. 2013. <a href="http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution/">http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution"></a></p>
 						<br>
 					</div>
 				</div>
