Add new content to bio

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
 						<p>I'm a socially conscious Web developer.</p>
-						<p>I currently live in San Diego, California.</p>
-						<p>I got my start in eco-friendly Web development by inserting YouTube videos into research articles for the world's premier amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
-						<p>Since then, I've gone to grad school and have worked in consulting after doing stints at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. Although an analyst, I often found myself launching websites for various <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+						<p>A former academic researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
+						<p>I got my start in eco-friendly Web development by inserting YouTube videos into pages for the UC Berkeley's premier amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
+						<p>Since then, I've done post-graduate education in natural sciences and have worked in consulting and at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. While a research associate, I often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
-						<p>My claim to fame is that I spearheaded the development of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the research community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative ideas</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
+						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the academic community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative ideas</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
 
 
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
@@ -54,6 +54,8 @@
 
 						<h3>Why me?</h3>
 						<p>I'm especially equipped to <b>help you make impacts on consumers and society while thinking critically about problems.</b></p>
+
+						<p>I work in object-oriented programming and full-stack development. Using JavaScript, Ruby-on-Rails, APIs, with added-on libraries, databases, and styling, I can help you create a communications platform that fits your needs.
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
