Add video iframes

--- a/index.html
+++ b/index.html
@@ -82,11 +82,20 @@
 
 						<h2>Videos</h2>
 
-						<p>The Frontlines of Fracking. <i>Sage Magazine</i> in collaboration with the Center for Business and the Environment, Ctr. for Environmental Law & Policy at Yale. 2012. <a href="http://www.sagemagazine.org/the-frontlines-of-fracking/">http://www.sagemagazine.org/the-frontlines-of-fracking/</a></p>
+						<iframe src="https://player.vimeo.com/video/183628186" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<p><a href="https://vimeo.com/183628186">UpRouted Promo</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-						<p>The Immigrant: A short comedy about climate change. First place, Beneath the Waves Film Festival; Second Place, Sierra Club Eco-Comedy Film Fest. 2014. <a href="https://vimeo.com/60722820">https://vimeo.com/60722820</a></p>
+						<iframe src="https://player.vimeo.com/video/152379070" width="640" height="469" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<p><a href="https://vimeo.com/152379070">The Frontlines of Fracking (2012)</a></p>
 
-						<p>Introducing CliO: The Climate Organism. Audience Choice Award, Massachusetts Institute of Technology "Climate CoLab" competition. 2014. <a href="https://vimeo.com/146032819">https://vimeo.com/146032819</a></p>
+						<iframe src="https://player.vimeo.com/video/146032819" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<p><a href="https://vimeo.com/146032819">The Climate Organism (CliO): Shifting cultures for a changing climate</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+						<iframe src="https://player.vimeo.com/video/69565086" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<p><a href="https://vimeo.com/69565086">Cicadas: Brood II</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+						<iframe src="https://player.vimeo.com/video/60722820" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						<p><a href="https://vimeo.com/60722820">The Immigrant</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 						<h2>Writing</h2>
 
