--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+in<!DOCTYPE html>
 <html lang='en'>
 <head>
 	<title>Omar Malik</title>
@@ -40,22 +40,22 @@
 					<div id="left-box">
 						<h1 class='page-title'>About me</h1>
 						<p>I'm a socially conscious Web developer.</p>
-						<p>A former academic researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
-						<p>I got my start in eco-friendly Web development by inserting YouTube videos into pages for the UC Berkeley's premier amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a></p>
-						<p>Since then, I've done post-graduate education in natural sciences and have worked in consulting and at <a href='https://envirocenter.yale.edu'>public policy research centers</a>. While a research associate, I often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
+						<p>Formerly an academic researcher, I'm dedicating my efforts to <b>using science and software for good</b>.</p>
+						<p>I got my start by inserting YouTube videos into pages for UC Berkeley's amphibian informatics database, <a href="http://amphibiaweb.org/cgi/amphib_query?where-genus=Oreophrynella&where-species=nigra">AmphibiaWeb.org.</a> Now I place high value in doing eco-friendly Web development.</p>
+						<p>Professionally, I've worked at <a href='https://envirocenter.yale.edu'>public policy research centers</a> and as an independent consultant. Although a researcher, I had often found myself launching websites for <a href="http://grist.org/news/this-is-what-happens-when-you-crowdfund-an-awesome-marine-park/">environmental campaigns</a> (partering with the <a href="http://palauun.org">United Nations</a> to protect oceans, for example) and I went on to do work for the US government in launching a portal for <a href="http://www.globalchange.gov/browse/indicators">climate change indicators</a> on their site, <a href='globalchange.gov'>globalChange.gov</a>.</p>
 
-						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the academic community and spurring some <a href="http://visuals.datadriven.yale.edu/waste_map/">innovative ideas</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
+						<p>My claim to fame is that I spearheaded the research of a first-of-its-kind <a href="http://epi.yale.edu/chapter/water-resources">global water quality dataset</a>. It's now being used by the  <a href="http://visuals.datadriven.yale.edu/waste_map/">research community</a>. The lessons learned were <a href="http://dx.doi.org/10.1016/j.envsci.2015.01.005">published </a>so that others could help take on the task.</p>
 
 
 						<div class="parallax"><img id="my-water-map" src="https://docs.google.com/drawings/d/1Znml7RDgZzwuXGuyjOsk2tjccn6lalv0eeIO9UehMZ4/pub?w=952&amp;h=496"></div>
 						<br>
 
-						<p><b>I believe that software, like science, relies on these peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for both people and the planet.</p>
+						<p><b>I believe that software, like science, relies on peer sharing networks</b> and makes the most out of our ability to <b>try new things and learn from our mistakes</b>. Good ideas should be open-source. It's critical to making progress for people and the planet.</p>
 
 						<h3>Why me?</h3>
 						<p>I'm especially equipped to <b>help you make impacts on consumers and society while thinking critically about problems.</b></p>
 
-						<p>I work in object-oriented programming and full-stack development. Using JavaScript, Ruby-on-Rails, APIs, with added-on libraries, databases, and styling, I can help you create a communications platform that fits your needs.
+						<p>I work in object-oriented programming and full-stack development. Using JavaScript, Ruby-on-Rails, APIs, with add-on libraries and styling, I can help you create communications platforms that fit your needs.
 
 						<h3>What now?</h3>
 						<p>Let's collaborate and start finding solutions!</p>
@@ -91,11 +91,6 @@
 						<iframe src="https://player.vimeo.com/video/146032819" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 						<p><a href="https://vimeo.com/146032819">The Climate Organism (CliO): Shifting cultures for a changing climate</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-						<iframe src="https://player.vimeo.com/video/69565086" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						<p><a href="https://vimeo.com/69565086">Cicadas: Brood II</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
-						<iframe src="https://player.vimeo.com/video/60722820" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						<p><a href="https://vimeo.com/60722820">The Immigrant</a> from <a href="https://vimeo.com/omalik">Omar Malik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 						<h2>Writing</h2>
 
