Set images to fixed position to nix scrolling; change welcome page image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-in<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang='en'>
 <head>
 	<title>Omar Malik</title>
@@ -28,7 +28,7 @@ in<!DOCTYPE html>
 				<div id="canvas">
 					<div id="center-box">
 						<p>Hi, I'm Omar.</p>
-						<p><img id="my-self-portrait" src="https://employ-production.s3.amazonaws.com/uploads%2F1483724901563%2Fom-portrait-26533dbc.jpg"></p>
+						<p><img id="my-self-portrait" src="https://docs.google.com/drawings/d/1wDNIK2XjjjZTPUv543Sc5aR7anPf4h_xkaHAnhfBoj8/pub?w=628&h=598"></p>
 					</div>
 					<div id="right-box">
 						<h2>Contact</h2>
@@ -105,7 +105,6 @@ in<!DOCTYPE html>
 
 						<p>Mobilize citizens to track sustianability. <i>Nature</i>. 2014. <a href="http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951">http://www.nature.com/news/development-mobilize-citizens-to-track-sustainability-1.14951</a>
 
-						<p>Setting the Standard in the Cleanup of Toxic Lead. 2013. <a href="http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution/">http://environment.yale.edu/news/article/setting-the-standard-in-the-fight-against-lead-pollution"></a></p>
 						<br>
 					</div>
 				</div>
