Add encircl to projects list

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
 							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/16N5Tf9aX_6lKlUrWoMiNk1Cu4-PtaFPDigWqBbA9xz4/pub?w=531&amp;h=531"><div><a href="https://frozen-depths-21192.herokuapp.com/"><h4><strong>My Energy Mapper</strong></h4></a><div class="paragraphs">Which US state consumes the most total energy? An interactive data explorer lets users interact with US energy data parsed from JSON using jQuery, d3.js.  </div><br>Role: Developer</div></li>
 
+							<li class="a-project"><img class="thumbnail" src="https://docs.google.com/drawings/d/1J1q_M_geXKnTCIGomajJrsTQTs3-55k4x4gVvkuls0Y/pub?w=531&amp;h=531"><div><a href="http:encircl.net"><h4><strong>Encircl.net</strong></h4></a><div class="paragraphs">An environmental storytelling website brining scientists and artists together. Led team of 18+ volunteers in prototyping, launching with CMS, and crafting multimedia content. </div><br>Role: Co-Founder</div></li>
 							</ul>
 					</div>
 
